# notebook-nd-viewer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
notebooks/: 01_example_usage.ipynb  01_example_usage.py
src/nb_nd_viewer/: __init__.py  _channels.py  _controls.py  _downsampling.py  _labels.py  _layout.py  _ranges.py  _rendering.py  _types.py  image_viewer.py  labels_viewer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_public_api.py
tests/unit/: __init__.py  test_channels.py  test_controls.py  test_downsampling.py  test_image_viewer.py  test_labels.py  test_labels_viewer.py  test_layout.py  test_ranges.py  test_rendering.py
